ddosify/templates/hammerdebug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ddosify
  labels:
    service: hammerdebug
  name: hammerdebug
spec:
  replicas: 1
  selector:
    matchLabels:
      service: hammerdebug
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: hammerdebug
    spec:
      containers:
        - env:
            - name: DOCKER_INFLUXDB_INIT_ADMIN_TOKEN
              valueFrom:
                configMapKeyRef:
                  key: DOCKER_INFLUXDB_INIT_ADMIN_TOKEN
                  name: env
            - name: DOCKER_INFLUXDB_INIT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DOCKER_INFLUXDB_INIT_PASSWORD
                  name: env
            - name: DOCKER_INFLUXDB_INIT_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: DOCKER_INFLUXDB_INIT_USERNAME
                  name: env
            - name: IS_DEBUG
              value: "true"
          image: ddosify/selfhosted_hammer:1.3.0
          imagePullPolicy: IfNotPresent
          name: hammerdebug
          resources: {}
      restartPolicy: Always
