ddosify/templates/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ddosify
  labels:
    service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: backend
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/selfhosted-ddosify: "true"
        service: backend
    spec:
      containers:
        - args:
            - /workspace/start_scripts/start_app_onprem.sh
          image: ddosify/selfhosted_backend:1.3.0
          name: backend
          imagePullPolicy: IfNotPresent
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ddosify
  labels:
    service: backend
  name: backend
spec:
  ports:
    - name: "8008"
      port: 8008
      targetPort: 8008
  selector:
    service: backend
status:
  loadBalancer: {}
