ddosify/templates/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ddosify
  labels:
    service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend
  strategy: {}
  template:
    metadata:
      labels:
        service: frontend
    spec:
      containers:
        - image: ddosify/selfhosted_frontend:1.2.1
          name: frontend
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ddosify
  labels:
    service: frontend
  name: frontend
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    service: frontend
status:
  loadBalancer: {}
