ddosify/templates/hammermanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: hammermanager
  name: hammermanager
spec:
  replicas: 1
  selector:
    matchLabels:
      service: hammermanager
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/selfhosted-ddosify: "true"
        service: hammermanager
    spec:
      containers:
        - args:
            - /workspace/start_scripts/start_app.sh
          image: ddosify/selfhosted_hammermanager:latest
          imagePullPolicy: Never
          name: hammermanager
          ports:
            - containerPort: 8001
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: hammermanager
  name: hammermanager
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    service: hammermanager
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: hammermanager-celery-beat
  name: hammermanager-celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      service: hammermanager-celery-beat
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/selfhosted-ddosify: "true"
        service: hammermanager-celery-beat
    spec:
      containers:
        - args:
            - /workspace/start_scripts/start_celery_beat.sh
          image: ddosify/selfhosted_hammermanager:latest
          imagePullPolicy: Never
          name: hammermanager-celery-beat
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: hammermanager-celery-worker
  name: hammermanager-celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      service: hammermanager-celery-worker
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/selfhosted-ddosify: "true"
        service: hammermanager-celery-worker
    spec:
      containers:
        - args:
            - /workspace/start_scripts/start_celery_worker.sh
          image: ddosify/selfhosted_hammermanager:latest
          imagePullPolicy: Never
          name: hammermanager-celery-worker
          resources: {}
      restartPolicy: Always
status: {}
