ddosify/templates/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ddosify
  labels:
    service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/selfhosted-ddosify: "true"
        service: minio
    spec:
      containers:
        - args:
            - server
            - /data
          image: minio/minio:RELEASE.2023-04-13T03-08-07Z
          name: minio
          ports:
            - containerPort: 9000
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: minio-data
      restartPolicy: Always
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ddosify
  labels:
    service: minio
  name: minio
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    service: minio
status:
  loadBalancer: {}
