ddosify/templates/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/selfhosted-ddosify: "true"
        service: redis
    spec:
      containers:
        - image: redis:6.2.6
          name: redis
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: redis-data
      restartPolicy: Always
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: redis
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    service: redis
status:
  loadBalancer: {}
