ddosify/templates/seaweedfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ddosify
  labels:
    service: seaweedfs
  name: seaweedfs
spec:
  replicas: 1
  selector:
    matchLabels:
      service: seaweedfs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/selfhosted-ddosify: "true"
        service: seaweedfs
    spec:
      containers:
        - args:
            - server
            - -s3
            - -dir=/data
          image: chrislusf/seaweedfs:3.51
          name: seaweedfs
          ports:
            - containerPort: 8333
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: seaweedfs-data
      restartPolicy: Always
      volumes:
        - name: seaweedfs-data
          persistentVolumeClaim:
            claimName: seaweedfs-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ddosify
  labels:
    service: seaweedfs
  name: seaweedfs
spec:
  ports:
    - name: "8333"
      port: 8333
      targetPort: 8333
  selector:
    service: seaweedfs
status:
  loadBalancer: {}
